deploy/kubernetes/namespace-dmsx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmsx
  labels:
    app.kubernetes.io/part-of: dmsx
